Fix(styling): Layout issues on large viewports; Add transition duration on drop-down

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -10,6 +10,10 @@
     @apply -top-[11rem] !important;
   }
 
+  .h-reset {
+    @apply h-auto !important;
+  }
+
   .h-nav_drop-down--closed {
     @apply max-h-[80px] !important;
   }
